// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser return statements parses expression returns 1`] = `
[
  Function {
    "func": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [
          Return {
            "tokens": {
              "return": {
                "isReserved": true,
                "kind": "Return",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": -9,
                    "line": -9,
                  },
                  "start": {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "return",
              },
            },
            "value": Call {
              "args": [],
              "callee": Variable {
                "name": {
                  "isReserved": false,
                  "kind": "Identifier",
                  "literal": undefined,
                  "location": {
                    "end": {
                      "column": -9,
                      "line": -9,
                    },
                    "start": {
                      "column": -9,
                      "line": -9,
                    },
                  },
                  "text": "RebootSystem",
                },
              },
              "closingParen": {
                "isReserved": false,
                "kind": "RightParen",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": -9,
                    "line": -9,
                  },
                  "start": {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": ")",
              },
              "optional": false,
            },
          },
        ],
      },
      "end": {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": [],
      "returns": 10,
    },
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "foo",
    },
  },
]
`;

exports[`parser return statements parses literal returns 1`] = `
[
  Function {
    "func": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [
          Return {
            "tokens": {
              "return": {
                "isReserved": true,
                "kind": "Return",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": -9,
                    "line": -9,
                  },
                  "start": {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "return",
              },
            },
            "value": Literal {
              "_location": undefined,
              "value": BrsString {
                "inArray": false,
                "kind": 3,
                "value": "test",
              },
            },
          },
        ],
      },
      "end": {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": [],
      "returns": 10,
    },
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "foo",
    },
  },
]
`;

exports[`parser return statements parses void returns 1`] = `
[
  Function {
    "func": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [
          Return {
            "tokens": {
              "return": {
                "isReserved": true,
                "kind": "Return",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": -9,
                    "line": -9,
                  },
                  "start": {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "return",
              },
            },
            "value": undefined,
          },
        ],
      },
      "end": {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": [],
      "returns": 10,
    },
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "foo",
    },
  },
]
`;
